corrigido getDeputado, corrigido swagger e readme
