# api/routes/deputadoRoutes.js
@@ -2,7 +2,7 @@
 module.exports = function (app) {
     var deputados = require('../controllers/deputadosController');
     // deputados Routes
-    app.route('/listarDeputados/:uf')
+    app.route('/listarDeputados')
         .get(deputados.get_deputados);
     app.route('/deputado/:idDeputado/:idLegislatura')
         .get(deputados.get_deputado);
