# swagger.json
@@ -17,15 +17,14 @@
   "schemes": ["http"],
 
   "paths": {
-    "/listarDeputados/{UF}": {
+    "/listarDeputados/": {
       "get": {
         "summary": "Retorna a lista de deputados, por UF fornecida",
-        "description": "Retorna a lista de deputados, por UF fornecida",
+        "description": "Retorna a lista de deputados, por UF fornecida. Caso não seja informado nenhuma UF, retornará a lista de todos os deputados federais em exercício no momento da solicitação.",
         "parameters": [
           {
             "name": "UF",
-            "in": "path",
-            "required": true,
+            "in": "query",
             "description": "Sigla da UF a ser pesquisada",
             "type": "string"
           }
